AX: Consolidate radio button group member code with that in HTMLElement derivatives https://bugs.webkit.org/show_bug.cgi?id=155696 <rdar://problem/25260379>

Reviewed by Darin Adler.

Behavior covered by existing tests.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::addRadioButtonGroupMembers):
* dom/CheckedRadioButtons.cpp:
(WebCore::RadioButtonGroup::isValid):
(WebCore::RadioButtonGroup::members):
(WebCore::RadioButtonGroup::setCheckedButton):
(WebCore::CheckedRadioButtons::addButton):
(WebCore::CheckedRadioButtons::groupMembers):
(WebCore::CheckedRadioButtons::updateCheckedState):
* dom/CheckedRadioButtons.h:
* dom/Range.h:
(WebCore::documentOrderComparator):
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::isInRequiredRadioButtonGroup):
(WebCore::HTMLInputElement::radioButtonGroup):
(WebCore::HTMLInputElement::checkedRadioButtonForGroup):
* html/HTMLInputElement.h:



Canonical link: https://commits.webkit.org/174276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198997 268f45cc-cd09-0410-ab3c-d52691b4dbfc