Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -967,19 +967,9 @@ void AccessibilityRenderObject::addRadioButtonGroupMembers(AccessibilityChildren
     Node* node = this->node();
     if (is<HTMLInputElement>(node)) {
         HTMLInputElement& input = downcast<HTMLInputElement>(*node);
-        // if there's a form, then this is easy
-        if (input.form()) {
-            for (auto& associateElement : input.form()->namedElements(input.name())) {
-                if (AccessibilityObject* object = axObjectCache()->getOrCreate(&associateElement.get()))
-                    linkedUIElements.append(object);
-            }
-        } else {
-            for (auto& associateElement : descendantsOfType<HTMLInputElement>(node->document())) {
-                if (associateElement.isRadioButton() && associateElement.name() == input.name()) {
-                    if (AccessibilityObject* object = axObjectCache()->getOrCreate(&associateElement))
-                        linkedUIElements.append(object);
-                }
-            }
+        for (auto& radioSibling : input.radioButtonGroup()) {
+            if (AccessibilityObject* object = axObjectCache()->getOrCreate(radioSibling))
+                linkedUIElements.append(object);
         }
     } else {
         // If we didn't find any radio button siblings with the traditional naming, lets search for a radio group role and find its children.
