Source/WebCore/html/HTMLInputElement.cpp
@@ -1776,6 +1776,14 @@ bool HTMLInputElement::isInRequiredRadioButtonGroup()
     return false;
 }
 
+Vector<HTMLInputElement*> HTMLInputElement::radioButtonGroup() const
+{
+    CheckedRadioButtons* buttons = checkedRadioButtons();
+    if (!buttons)
+        return { };
+    return buttons->groupMembers(*this);
+}
+    
 HTMLInputElement* HTMLInputElement::checkedRadioButtonForGroup() const
 {
     if (CheckedRadioButtons* buttons = checkedRadioButtons())
